--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "project-web": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image-magnify": "^2.7.4",
     "react-loading-skeleton": "^3.5.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
